<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_4"
        android:textSize="@dimen/Text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_themes_Space_Gray"
            android:textSize="@dimen/Text_size"
            app:layout_constraintBottom_toTopOf="@+id/materialRadioButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_themes_green"
            android:textSize="@dimen/Text_size"
            app:layout_constraintBottom_toTopOf="@+id/materialRadioButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialRadioButton" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_themes_blue"
            android:textSize="@dimen/Text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialRadioButton2" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_themes_Red"
            android:textSize="@dimen/Text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialRadioButton2" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>